* Don't cut off text when regexp is long enough to require h scrollbar (CM instance and entire inline widget automatically grow in height to accomodate scrollbar when needed) * Bold text for special chars in regex, making them easier to notice & making syntax colors more obvious. (Note: the default Brackets font does not support bold, so you get pseudo-bold chars that aren't the same width as the other non-bold chars. For a single-line edit field this isn't a problem). * Fix NPE when rolling over group whose ")" is last char in regex * Fix bug where pressing Enter in regexp still inserted a newline * UI nit: horizontally align sample text's 1st char with regexp's 1st char

--- a/regex-editor-styles.css
+++ b/regex-editor-styles.css
@@ -9,6 +9,12 @@
     border-radius: 3px;
     box-shadow: inset 0 1px 0 rgba(0,0,0,0.12);
 }
+.inline-regex-editor .CodeMirror .cm-keyword, .inline-regex-editor .CodeMirror .cm-bracket, .inline-regex-editor .CodeMirror .cm-rangeinfo {
+    font-weight: bold;
+}
+.inline-regex-editor .CodeMirror .cm-bracket {
+    color: #535353;
+}
 
 .inline-regex-editor .CodeMirror-focused {
     /* imitating focused <input> appearance - but with toned-down focus ring so syntax coloring easier to see */
@@ -42,8 +48,8 @@
     margin-left: 40px;
     font-family: "SourceCodePro";
     font-size: inherit;
-    padding: 2px;
-    width: 500px;
+    padding: 2px 2px 2px 6px; /* 6px aligns L edge of text with CM field above */
+    width: 546px;
 }
 
 
@@ -88,5 +94,7 @@
     background-color: rgba(123, 137, 217, 0.37);
     border-radius: 2px;
     height: 18px;
-    top: 47px;
+    
+    /* top is programmatically set to match top of .inline-regex-sample; adjust downward to match its border + padding */
+    margin-top: 3px;
 }
